# rust-im-server

./: .env  Cargo.toml  README.md  init.sql
migrations/2022-05-12-014445_create_user_table/: up.sql
migrations/2022-05-19-143626_create_friend_requests/: down.sql  up.sql
src/: config.rs  constants.rs  jwt_auth.rs  lib.rs  main.rs  redis_connections.rs  schema.rs  ws_server.rs
src/controllers/: auth.rs  friends.rs  mod.rs  users.rs
src/messages/: friend_notification.rs  mod.rs  send_message.rs
src/models/: friend_requests.rs  mod.rs  user.rs  users.rs
src/services/: friend_requests.rs  mod.rs  users.rs
